Fix minor layout issue
Fix minor layout issue with #controllerButtons div in controller.css

--- a/web/css/controller.css
+++ b/web/css/controller.css
@@ -623,7 +623,7 @@ button:hover {
 	position:relative;
         width:100%;
 	height:99%;
-        margin-left:1%;
+        margin-left:0;
         background-color:white;
 	box-shadow:0 0 8px black;
 	border-radius:5px;
